@@ -3,9 +3,6 @@ use strict;
 use warnings FATAL => 'all';
 use Test::More;
 
-unless ($ENV{TEST_AUTHOR}) {
-  plan(skip_all => 'Author test.  Set $ENV{TEST_AUTHOR} to a true value to run.');
-}
 
 # Ensure a recent version of Test::Pod
 my $min_tp = 1.48;
